--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,10 @@
       "src": "/(.*)",
       "dest": "/server.js"
     }
-  ]
+  ],
+  "functions": {
+    "api/socket.js": {
+      "runtime": "nodejs16.x"
+    }
+  }
 }
