--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server.js",
-      "use": "@vercel/node"
-    }
-  ],
+
   "routes": [
     {
       "src": "/(.*)",
@@ -13,7 +8,7 @@
     }
   ],
   "functions": {
-    "api/socket.js": {
+    "api/**/*.js": {
       "runtime": "nodejs16.x"
     }
   }
