--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "Restoran avtomatlashtirish tizimi",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -15,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "engine.io": "^6.6.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "firebase": "^10.14.1",
@@ -24,7 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
     "npm": "^10.8.3",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.8.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "winston": "^3.11.0"
