--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.3",
+    "node-fetch": "^3.3.2",
     "npm": "^10.8.3",
     "serverless-http": "^3.2.0",
     "socket.io": "^4.8.0",
